# Medimage

./: .gitignore  README.md  deploy_medical_models.py  deploy_medical_models_foundry.py  generate_patient_data.py  medical_ai_deployment.py  organize_multimodal_data.py  setup_system.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  services.py
data/organized/demo/: patients.json
data/organized/live_testing/: patients.json
frontend/: package-lock.json  package.json
frontend/src/: AnalyticsDashboard.tsx  App.tsx  LandingPage.tsx  Liver3DViewer.tsx  SpinningLiver.tsx
scripts/: create_logo.py
