[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.118.0"}
psycopg = {extras = ["binary"], version = "^3.2.10"}
python-multipart = "^0.0.20"
pillow = "^11.3.0"
azure-ai-ml = "^1.29.0"
azure-identity = "^1.25.0"
openai = "^2.1.0"
python-dotenv = "^1.1.1"
nibabel = "^5.3.2"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
